Fix the link alignment in collapsed messages

--- a/hyperkitty/static/css/style.css
+++ b/hyperkitty/static/css/style.css
@@ -674,7 +674,8 @@ ul.attachments-list li {
 }
 
 
-.email_body a {
+.email_body span.read-more a,
+.email_body span.read-less a {
     float: right;
     padding: 3px 10px 0px 0px;
 }
